fixed github button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ An undergraduate programmer who has a passion for creative work and a perseverin
 <ul>
 <li><a href="https://www.facebook.com/tristan.vasco/"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
 <li><a href="https://www.linkedin.com/in/tristan-jerico-vasco-880118227/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-<li><a href=""><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+<li><a href="https://github.com/TristanJSV"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
 </ul>
 <a href="TRISTANVASCO_RESUME.pdf">
     <button>
